--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "cloud-build-badge": "index.js"
+  },
   "dependencies": {
-    "@google-cloud/storage": "^2.3.1"
+    "@google-cloud/storage": "^2.3.1",
+    "chalk": "^2.4.1",
+    "pify": "^4.0.1",
+    "template-file": "^3.0.1",
+    "yargs": "^12.0.5"
   },
   "devDependencies": {
     "prettier": "1.15.3"
