--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cloud-build-badge": "index.js"
   },
   "dependencies": {
+    "@google-cloud/functions-emulator": "^1.0.0-beta.5",
     "@google-cloud/storage": "^2.3.1",
     "chalk": "^2.4.1",
     "pify": "^4.0.1",
